--- a/src/test/resources/config/environments/securetext-QA.properties
+++ b/src/test/resources/config/environments/securetext-QA.properties
@@ -1,5 +1,5 @@
-#Fri Oct 15 20:08:57 IST 2021
+#Mon Oct 18 19:13:15 IST 2021
 Employee_Id=0
-Store_Key=le5ar
 Password=MTkwMA\=\=
-Station_Key=a2E0ZGU\=
+Store_Key=LE5AR
+Station_Key=S0E0REU\=
