--- a/src/test/resources/config/environments/securetext-QA.properties
+++ b/src/test/resources/config/environments/securetext-QA.properties
@@ -1,5 +1,7 @@
-#Mon Oct 18 19:13:15 IST 2021
+#Fri Nov 12 16:18:10 IST 2021
+Store_Key_AutomationStore=KW4WM
 Employee_Id=0
-Password=MTkwMA\=\=
 Store_Key=LE5AR
+Password=MTkwMA\=\=
+Station_Key_AutomationStore=TkxSQ0s\=
 Station_Key=S0E0REU\=
