--- a/src/test/resources/config/selenium/runtime.properties
+++ b/src/test/resources/config/selenium/runtime.properties
@@ -1,5 +1,5 @@
 ######Waits and Screenshot######
-defaultWait=40
+defaultWait=10
 screenshotDelay=0
 windowSwitchDelay=5000
 windowSwitchExplicitDelay=5000
@@ -20,7 +20,7 @@ desiredCapabilities.internetexplorer=requireWindowFocus==true
 desiredCapabilities.internetexplorer=ie.ensureCleanSession==true
 ######Driver Options######
 options.chrome=--start-maximized
-options.headless.chrome=false
+options.headless.chrome=true
 #options.chrome=--disable-notifications
 options.chrome.useAutomationExtension=false
 ####Other Framework Options####
