--- a/src/test/resources/allure.properties
+++ b/src/test/resources/allure.properties
@@ -1,3 +1,3 @@
 allure.results.directory=target/allure-results
-allure.link.issue.pattern=https://example.org/browse/{}
+allure.link.issue.pattern=https://dev.azure.com/AdoraPOSLLC/Adora/_workitems/edit/
 
