--- a/src/test/resources/config/selenium/runtime.properties
+++ b/src/test/resources/config/selenium/runtime.properties
@@ -1,5 +1,5 @@
 ######Waits and Screenshot######
-defaultWait=25
+defaultWait=40
 screenshotDelay=0
 windowSwitchDelay=5000
 windowSwitchExplicitDelay=5000
@@ -28,7 +28,7 @@ attributeForTableCellCompare=title
 xPathForLabels=following-sibling::label/span[contains(@class\, '__label')]
 #xPathForLabels=label2
 ####Grid URL####
-seleniumGridURL=http://10.44.46.52:5555/wd/hub
+seleniumGridURL=http://localhost:4444
 ####proxyInfo####
 useProxy=false
 httpProxyURL=http://NAappProxyHTTPNoPers.wlb.nam.nsroot.net:9999
