--- a/src/test/resources/config/environments/securetext-QA.properties
+++ b/src/test/resources/config/environments/securetext-QA.properties
@@ -5,3 +5,6 @@ Store_Key=LE5AR
 Password=MTkwMA\=\=
 Station_Key_AutomationStore=TkxSQ0s\=
 Station_Key=S0E0REU\=
+customerEmail=existingcustomer@test.com
+customerPassword=cGFzc3dvcmQ\=
+
