--- a/src/test/resources/config/environments/securetext-QA.properties
+++ b/src/test/resources/config/environments/securetext-QA.properties
@@ -2,7 +2,7 @@
 Store_Key_AutomationStore=KW4WM
 Employee_Id=0
 Store_Key=LE5AR
-Password=NjUwMA\=\=
+Password=MTcwMA\=\=
 Station_Key_AutomationStore=TkxSQ0s\=
 Station_Key=S0E0REU\=
 customerEmail=existingcustomer@test.com
