--- a/src/test/resources/config/selenium/runtime.properties
+++ b/src/test/resources/config/selenium/runtime.properties
@@ -21,6 +21,7 @@ desiredCapabilities.internetexplorer=ie.ensureCleanSession==true
 ######Driver Options######
 options.chrome=--start-maximized
 options.headless.chrome=true
+options.headless.edge=true
 #options.chrome=--disable-notifications
 options.chrome.useAutomationExtension=false
 ####Other Framework Options####
