--- a/src/test/resources/config/environments/securetext-QA.properties
+++ b/src/test/resources/config/environments/securetext-QA.properties
@@ -6,5 +6,5 @@ Password=MTcwMA\=\=
 Station_Key_AutomationStore=TkxSQ0s\=
 Station_Key=S0E0REU\=
 customerEmail=existingcustomer@test.com
-customerPassword=cGFzc3dvcmQ\=
+customerPassword=UGFzc3dvcmQxMjNA
 
