--- a/pom.xml
+++ b/pom.xml
@@ -55,17 +55,22 @@
     <dependency>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-api</artifactId>
-        <version>2.9.0</version>
+        <version>2.19.0</version>
     </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.19.0</version>
+        </dependency>
     <dependency>
         <groupId>org.seleniumhq.selenium</groupId>
         <artifactId>selenium-api</artifactId>
-        <version>3.141.59</version>
+        <version>4.0.0</version>
     </dependency>
     <dependency>
         <groupId>org.seleniumhq.selenium</groupId>
         <artifactId>selenium-support</artifactId>
-        <version>3.141.59</version>
+        <version>4.0.0</version>
     </dependency>
     <dependency>
         <groupId>org.seleniumhq.selenium</groupId>
@@ -75,7 +80,12 @@
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-chrome-driver</artifactId>
-            <version>3.141.59</version>
+            <version>4.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-edge-driver</artifactId>
+            <version>4.0.0</version>
         </dependency>
         <dependency>
         <groupId>commons-configuration</groupId>
