update code of firefox driver

--- a/src/test/resources/config/selenium/runtime.properties
+++ b/src/test/resources/config/selenium/runtime.properties
@@ -22,6 +22,7 @@ desiredCapabilities.internetexplorer=ie.ensureCleanSession==true
 options.chrome=--start-maximized
 options.headless.chrome=true
 options.headless.edge=true
+options.headless.firefox=true
 #options.chrome=--disable-notifications
 options.chrome.useAutomationExtension=false
 ####Other Framework Options####
