update safari driver

--- a/src/test/resources/config/selenium/runtime.properties
+++ b/src/test/resources/config/selenium/runtime.properties
@@ -23,6 +23,7 @@ options.chrome=--start-maximized
 options.headless.chrome=true
 options.headless.edge=true
 options.headless.firefox=true
+options.headless.safari=true
 #options.chrome=--disable-notifications
 options.chrome.useAutomationExtension=false
 ####Other Framework Options####
