update runtime properties

--- a/src/test/resources/config/environments/securetext-QA.properties
+++ b/src/test/resources/config/environments/securetext-QA.properties
@@ -1,10 +1,9 @@
-#Fri Nov 12 16:18:10 IST 2021
-Store_Key_AutomationStore=KW4WM
-Employee_Id=0
-Store_Key=LE5AR
-Password=MTcwMA\=\=
+#Wed Sep 06 11:03:59 IST 2023
 Station_Key_AutomationStore=TkxSQ0s\=
+Store_Key=LE5AR
 Station_Key=S0E0REU\=
 customerEmail=existingcustomer@test.com
 customerPassword=UGFzc3dvcmQxMjNA
-
+Employee_Id=0
+Store_Key_AutomationStore=KW4WM
+Password=NjEwMA\=\=
