--- a/src/test/resources/config/selenium/runtime.properties
+++ b/src/test/resources/config/selenium/runtime.properties
@@ -20,7 +20,7 @@ desiredCapabilities.internetexplorer=requireWindowFocus==true
 desiredCapabilities.internetexplorer=ie.ensureCleanSession==true
 ######Driver Options######
 options.chrome=--start-maximized
-options.headless.chrome=true
+options.headless.chrome=false
 options.headless.edge=true
 options.headless.firefox=true
 options.headless.safari=true
