--- a/src/test/resources/config/environments/securetext-QA.properties
+++ b/src/test/resources/config/environments/securetext-QA.properties
@@ -1,4 +1,4 @@
-#Wed Sep 06 11:03:59 IST 2023
+#Wed Dec 27 23:43:43 IST 2023
 Station_Key_AutomationStore=TkxSQ0s\=
 Store_Key=LE5AR
 Station_Key=S0E0REU\=
@@ -6,4 +6,4 @@ customerEmail=existingcustomer@test.com
 customerPassword=UGFzc3dvcmQxMjNA
 Employee_Id=0
 Store_Key_AutomationStore=KW4WM
-Password=NjEwMA\=\=
+Password=MjcwMA\=\=
